[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Prototype/Sprites/characterPlaceholder.png" type="Texture" id=1]
[ext_resource path="res://Scripts/baseEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Enemy" type="Area2D" groups=["enemy"]]
z_index = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.52549, 0.52549, 1 )
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
flip_h = true

[node name="iframeTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="timeout" from="iframeTimer" to="." method="invisOver"]
[connection signal="tween_all_completed" from="Tween" to="." method="startAction"]
